--- a/style.css
+++ b/style.css
@@ -11,7 +11,9 @@ body {
 }
 
 .section{
-    padding: 40px;
+    margin: 40px;
+    padding: 20px;
+    border: solid darkgray 2px;
 }
 
 .container {
