--- a/style.css
+++ b/style.css
@@ -9,7 +9,9 @@ body {
     border: 0;
     margin: 0 0 80px; /* bottom = footer height */
 }
-
+.sections {
+    padding-top: 200px;
+}
 .section{
     margin: 40px;
     padding: 20px;
@@ -106,9 +108,8 @@ a:hover {
     background: #fff;
     width: 100%;
     height: 180px;
-    padding: 20px;
-    padding-top: 30px;
-    padding-left: 40px;
+    top: 0;
+    position: fixed;
     box-shadow: 0px 10px 10px #acabab;
     box-sizing: border-box;
 }
